--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
     "@mui/material": "^5.4.4",
+    "@react-md/icon": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
