--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,14 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "chai-http": "^4.3.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "sinon": "^13.0.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1"
   }
