--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.9",
     "sinon": "^13.0.1"
   },
   "devDependencies": {
