--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "chai-http": "^4.3.0",
+    "connect-ensure-login": "^0.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.9",
+    "express-session": "^1.17.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0",
     "sinon": "^13.0.1"
   },
   "devDependencies": {
