set up database in mongoDB Atlas and fix app and server, they needed to be switched

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,8 +14,9 @@
     "connect-ensure-login": "^0.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.9",
     "express-session": "^1.17.2",
+    "jest": "^27.5.1",
+    "mongoose": "^6.2.9",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
-    "prettier": "^2.6.1"
+    "prettier": "^2.6.1",
+    "supertest": "^6.2.2"
   }
 }
