--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.2",
     "chai-http": "^4.3.0",
     "connect-ensure-login": "^0.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
