--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,8 +17,10 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "jest": "^27.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
     "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
     "sinon": "^13.0.1"
