--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "debug": "^4.3.4",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
