--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "debug": "^4.3.4",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
