--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
