--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,9 +16,11 @@
     "bcrypt": "^5.0.1",
     "debug": "^4.3.4",
     "font-awesome": "^4.7.0",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
