--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.3",
     "@fullpage/react-fullpage": "^0.1.22",
     "@mui/material": "^5.4.4",
+    "@reach/combobox": "^0.16.5",
     "@react-md/icon": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.4",
     "styled-components": "^5.3.3",
+    "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
